--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
     }
   ],
   "require": {
-    "php": ">=7.1",
-    "solbianca/vardumper": "^1.0"
+    "php": ">=7.1"
   },
   "autoload": {
     "psr-4": {
