--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,20 @@
+# Config file for https://travis-ci.org/
+# Validate this file here - http://lint.travis-ci.org/
+
 language: php
 
 php:
-    - 7.1
-    - 7.2
+  - 7.1
+  - 7.2
 
-php codecept run
+sudo: required
+
+install:
+  - composer install --no-interaction
+  - echo "Download and Install codecept.phar"
+  - wget -c -nc --retry-connrefused --tries=0 http://codeception.com/releases/2.2.8/codecept.phar
+  - chmod +x codecept.phar
+  - php codecept.phar --version
+
+script:
+  - php codecept.phar run
