--- a/codeception.yml
+++ b/codeception.yml
@@ -1,6 +1,7 @@
 paths:
     tests: tests
     output: tests/_output
+    log: tests/_log
     data: tests/_data
     support: tests/_support
     envs: tests/_envs
