--- a/.travis.yml
+++ b/.travis.yml
@@ -7,18 +7,9 @@ php:
   - 7.1
   - 7.2
 
-sudo: required
-
 install:
-  - composer install --no-interaction
-  - echo "Download and Install codecept.phar"
-  - wget -c -nc --retry-connrefused --tries=0 http://codeception.com/releases/2.2.8/codecept.phar
-  - chmod +x codecept.phar
-  - php codecept.phar --version
-  
-before_script:
+  - composer self-update
   - composer install
-  - php codecept.phar build
 
 script:
-  - php codecept.phar run
+  - php vendor/codeception/codeception/codecept run
